# 2024_kn240-oop

1_lab/: README1lab.md
1_lab/poetry_env/: main.py  pyproject.toml
2_lab/: __main__.py  tqdm_test.ipynb  write_file.py
