[project]
name = "poetry-env"
version = "0.1.0"
description = "Experimenting with poetry"
authors = [
    {name = "Sp1ritGuard",email = "nazar.rak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
